# Hybrid-RAG-System-Production-Grade-

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/embeddings/: __init__.py  hf_faiss.py
src/eval/: __init__.py  cases.sample.json  harness.py  runner.py
src/ingest/: __init__.py  chunking.py  loader_pdf.py  ocr_fallback.py  pipeline.py
src/memory/: __init__.py  chat_history.py
src/retrieve/: __init__.py  hybrid.py
tests/: test_chat_history.py  test_main_helpers.py
