[project]
name = "hyb-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
	"langchain",
	"langchain-community",
	"langchain-text-splitters",
	"langchain-groq",
	"langchain-huggingface",
	"langsmith",
	"faiss-cpu",
	"rank-bm25",
	"sentence-transformers",
	"transformers",
	"torch",
	"pypdf",
	"pytesseract",
	"pdf2image",
	"Pillow",
	"python-dotenv",
	"rich",
	"typer",
	"tenacity",
]
